--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,135 @@
 NEWS for OpenSC -- History of user visible changes
 
-Complete change history is available online:
-http://www.opensc-project.org/opensc/timeline
+New in 0.13.1; 2014-05-16
+* new card driver DNIe
+* extended existing drivers by support of
+    Swedish eID card (gemsafeV1)
+    EstEID 3.5 (mcrd)
+* bogus javacard driver removed
+* build
+    return to the standard use of 'autoconf'
+    CI specific bootstrap script: git commit stamp for the built packages
+    windows friendly compile settings
+    fixed a ton of compiler warnings
+    fence against using EVP_sha256 mech
+    debian packaging templates
+    compile without OpenSSL and without SM
+    enable compiler warnings by default
+    win32
+        add 'VarFileInfo' block to version-info
+        include to MSI package 'openpgp-tool.exe'
+        'version-info' resource for each target
+* macOSX
+    "graphical uninstaller" to distribution DMG
+    update package building to modern tools
+    new tool and SDK paths for OS X 10.8
+    improved opensc-installer from distribution
+    osx: target 10.9 (a free upgrade to anyone using 10.6+) from now on
+* common
+    added getpass implementation for non windows
+* libopensc
+    allow for the pin to be entered on the keypad during issuing
+    introduce 'encoded-content' to the sc_file data
+    general usage method to allocate generalized time
+* minidriver
+    implemented 'CardChangeAuthenticator', 'CardGetChallenge' and 'CardUnblockPin'
+    improved management of GUID
+    use reader pin pad if available and allowed
+    configuration options for
+        compose GUID
+        refuse create container mechanism
+    add registers file for feitian cards
+    fixed
+        return code in 'CardGetContainerInfo'
+        returned 'tries-left' for blocked card
+        length of stripped data in RSADecrypt
+* pkcs#11
+    bind non-recognized card, generic 'init-token' procedure
+    fixed
+        CKA_VALUE of 'public-key' object
+        fix ASN1 encoding issues
+        PIN-NOT-INITIALIZED for the non-user PINs
+        buffers overflow
+        segfault due to the undefined 'application-file'
+* pkcs15
+    'direct' public key in PuKDF encoding
+    implement SPKI public key encoding
+    include and maintain minidriver framework data: cmap-record, md-flags, GUID, ..
+    fixed
+        encoding of 'SubjectPublicKeyInfo'
+        DER encoding of 'issuer' and 'subject'
+        PIN validation in 'pkcs15-verify'
+        public key algorithm
+        ECC public key encoding
+        ECC ecpointQ
+* pkcs15init
+    introduce 'max-unblocks' PIN init parameter 
+    keep cert. blob in cert-info data
+    file 'content' and 'prop-attrs' in the card profile
+    in profile more AC operations are parsed
+    fixed
+        NULL pointer dereference error
+        NULL 'store-key' handle
+        ignore if no TokenInfo file to update
+        set EC pubkey parameters from init data
+* reader-pcsc
+    fixed
+        implicit pin modification
+        pin checking when implicitly given
+        verify/modify pinpad commands
+* SM
+    common SM 'increase-sequence-counter' procedure
+    move SM APDU procedures to dedicated source file
+    move SM common crypto procedures to the dedicated library
+* doc
+    documentation for --list-token-slots
+* default driver
+    do not send possibly arbitrary APDU-s to an unknown card.
+    by default 'default' card driver is disabled 
+* sc-hsm
+    Added support for
+        persistent EC public keys generated from certificate signing requests
+        token label to be set via C_InitToken or sc-hsm-tool
+        unblock PIN using C_InitPIN()
+    initialize EC key params
+    fixed
+        bug that prevents a newly generated 2048 key to show up at the PKCS#11 interface
+        bug when changing SO-PIN with opensc-explorer sc-hsm-tool
+        memory checking and removed warning
+        problem deleting CA certificates sc-hsm
+        public key format returned when generating ECC keys
+    sc-hsm-tool
+        better error handling for non-SmartCard-HSM cards
+        support for DKEK password sharing scheme
+        threshold scheme parameters to manpage
+        crash on Windows when --wrap-key frees memory allocated in opensc.dll
+* ias
+    simplify the compute signature operation
+* PIV
+    use SPKI encoding for public key data
+    extract public key from cert if no object on card
+    fix
+        segfault and valgrind issue
+        gen_key to expect the proper PIV Key references
+* CardOS
+    build for Windows
+    use information from AlgorithmInfo
+    supported CardOS V5.0
+* epass2003
+    key generation allows stricter privkey/pubkey ACLs
+    list_files implemented
+    properly disable padding
+    allow exponents other than 65537
+* myeid
+    fixed file-id in myeid.profile
+* entersafe
+    fix a bug when writing public key  
+* EstEID
+    match card only based on presence of application.
+* pteid
+    do not call the iso7816 driver get_response operation
+* myeid
+    support of EC key is broken
 
 New in 0.13.0; 2012-12-04
 * New card driver ePass2003.
